[gd_scene load_steps=8 format=3 uid="uid://bgakc4g0r17e2"]

[ext_resource type="Script" uid="uid://ckxhe4eti8fwg" path="res://lib/ui/menu/game_button.gd" id="1_se70s"]
[ext_resource type="Texture2D" uid="uid://cboygvs61q350" path="res://assets/ui/play.png" id="2_xurbt"]
[ext_resource type="AudioStream" uid="uid://datu5k4xgkpnm" path="res://sounds/button.wav" id="3_pouqw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pouqw"]

[sub_resource type="Animation" id="Animation_pouqw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xurbt"]
resource_name = "hover"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.250682, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.2, 1.2), Vector2(1.3, 1.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pouqw"]
_data = {
&"RESET": SubResource("Animation_pouqw"),
&"hover": SubResource("Animation_xurbt")
}

[node name="GameButton" type="TextureRect"]
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_xurbt")
script = ExtResource("1_se70s")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_pouqw")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_pouqw")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_pouqw")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
